# OneAgent-SDK-for-C

./: .editorconfig  .gitattributes  README.md  onesdk-config-version.cmake  onesdk-config.cmake  onesdk-platform.cmake  onesdk-version.cmake
docs/: annotated.html  classes.html  deprecated.html  dir_00c011bef261143570b84b595a5a55cb.html  dir_17f0c76cb54783b10a44b9cb754671fd.html  dir_1f5a7321052bf06dbe22563e4de8979c.html  dir_2a29f73025fe91cc3aed2b0949f7b311.html  dir_48a968f0a54f5f45c2ad54ffe846f92c.html  dir_57326019c1f2447d742e07b3707bbe0e.html  dir_e11ff9dae1e7a45d3f00d4242cad749e.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_h.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_w.html  globals_x.html  group__channels.html  group__custom__request__attributes.html  group__customservice.html  group__database__requests.html  group__ex__explicit__parent.html  group__ex__metrics.html  (+49 more)
img/: fork-diagram-README.txt  fork-diagrams-src.xml
samples/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  (+5 more)
samples/sample1/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  billing_queue.h  cmake_install.cmake  config_database.h  http_request.h  http_response.h  input_processor.h  main.cpp  sample-metric-plugin.json  sample1.vcxproj  sample1.vcxproj.filters  transformer_service.h  transformer_service_client_proxy.h  transformer_service_dispatcher.h  util.h  web_client.h  web_service.h  web_service_impl.h
samples/sample1/sample1.dir/Release/sample1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample1.lastbuildstate
(+38 files in other folders)
